--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,42 +1,17 @@
 server:
   port: 8084
 spring:
+  main:
+    web-application-type: none
   kafka:
-    bootstrap-servers: 192.168.0.5:9092
     consumer:
       auto-offset-reset: latest
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-  datasource:
-    url: jdbc:postgresql://192.168.0.7:5432/dev-docuhelper
-    username: postgres
-    password: password
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-
-  # Spring AI PDF ?? ? AI ?? (??? ??? ??? ?? ??)
   ai:
     openai:
+      embedding:
+        options:
+          model: text-embedding-3-small
       chat:
         options:
           model: gpt-4.1-nano-2025-04-14
-      api-key: ${OPENAI_API_KEY}
-    pdf:
-      enabled: true
-    ollama:
-      base-url: http://192.168.0.8:11434
-#    vector-store:
-#      pgvector:
-#        enabled: true
-#        schema: public                                 # ?? ??? ???
-#        table: vectors                                 # ?? ?? ????
-
-logging:
-  level:
-    root: INFO
-    org.springframework: INFO
-    org.bmserver.docuhelperdocumentparser: DEBUG       # ?????? ???? ?? ??
