--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -6,6 +6,9 @@ spring:
       api-key: ${OPENAI_API_KEY}
     ollama:
       base-url: http://192.168.0.8:11434
+ docuhelper:
+  file:
+    endpoint: http://localhost:8082
 
 logging:
   level:
