Document Type 파싱 분기 처리

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,3 +9,9 @@ spring:
 docuhelper:
   file:
     endpoint: ${DOCUHELPER_FILE_ENDPOINT}
+
+logging:
+  level:
+    org.bmserver.docuhelperdocumentparser:
+      kafka.listener: INFO
+      parser.ParserService: INFO
